--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -47,17 +47,26 @@ a {
 }
 /* =========== HEADER =============== */
 
-.header {
-  position: relative;
+.fixed-header {
   background: #e6f0ff;
+  padding-top: 26px;
+  position: sticky;
+  top: -26px;
+  z-index: 1;
+}
+
+.hero-wrap {
+  position: relative;
   display: flex;
+  flex-direction: column;
+  background: #e6f0ff;
   height: 100vh;
 }
 
 .navbar {
   display: flex;
   align-items: center;
-  padding-top: 50px;
+  padding: 12px 0;
 }
 
 .navbar ul {
