--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,7 +8,8 @@
   --primary-color: #0f1b4c;
 }
 
-html, body{
+html,
+body {
   scroll-behavior: smooth;
 }
 
@@ -62,6 +63,7 @@ a {
 .hero-wrap {
   position: relative;
   display: flex;
+  justify-content: center;
   flex-direction: column;
   background: #e6f0ff;
   height: calc(100vh - 90px);
@@ -105,15 +107,11 @@ a {
   border-radius: 8px;
 }
 
-.hero {
-  margin-top: 130px;
-}
-
-.hero .info {
+.hero-wrap .info {
   width: 51%;
 }
 
-.hero .sub-title {
+.hero-wrap .sub-title {
   font-weight: 500;
   font-size: 1.8rem;
   line-height: 1.5rem;
@@ -121,7 +119,7 @@ a {
   color: #687690;
 }
 
-.hero .title {
+.hero-wrap .title {
   margin-top: 8px;
   font-weight: 700;
   font-size: 6.4rem;
@@ -129,7 +127,7 @@ a {
   color: #000336;
 }
 
-.hero .desc {
+.hero-wrap .desc {
   margin-top: 30px;
   font-weight: 400;
   font-size: 1.8rem;
